# drm

./: Makefile.am  configure.ac  xf86drmMode.c
include/drm/: nouveau_drm.h  tegra_drm.h
nouveau/: nouveau.h  pushbuf.c
tegra/: Makefile.am  channel.c  fence.c  job.c  private.h  pushbuf.c  tegra.c  tegra.h
tests/modetest/: modetest.c
tests/tegra/: .gitignore  Makefile.am  drm-test-tegra.c  drm-test.c  drm-test.h  gr2d-fill.c  vic-syncpt.c
